# OnyxShell

./: .gitignore  Cargo.toml  KERNEL_FIXES.md  README.md  build.rs  build.sh  kernel-critical-fixes.patch  linker.ld  test_qemu.sh
.cargo/: config.toml
src/: commands.rs  eval.rs  features.rs  io.rs  main.rs  path.rs  pipeline.rs  syscalls.rs
src/commands/: mod.rs  nav.rs  sys.rs
src/commands/exec/: mod.rs  run.rs  script.rs
src/commands/file/: copy.rs  edit.rs  mod.rs
src/features/: env.rs  history.rs  mod.rs
src/features/buffer/: mod.rs
src/features/service/: glob.rs  jobs.rs  mod.rs
src/pipeline/: exec.rs  mod.rs  parse.rs
src/repl/: cooked.rs  mod.rs  raw.rs
src/syscalls/: consts.rs  mod.rs
src/syscalls/comm/: mod.rs
src/syscalls/io/: mod.rs  proc.rs  tty.rs
